# cargo-cabal

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
.github/workflows/: nix.yml  update-flake-lock.yml
extra/: Makefile  cabal-pack.scenario  cargo-cabal.scenario  flake.nix  shell.nix
src/: Setup.hs  Setup.lhs  build.rs  cabal.rs  cargo.rs  errors.rs  flake.rs  hsbindgen.rs  lib.rs  main.rs
tests/: cabal.project  haskell-nix.sh  simple-stack.sh  simple.sh
tests/greetings/: .gitignore  Cargo.toml
tests/greetings/src/: lib.rs
tests/test/: test.cabal
tests/test/app/: Main.hs
