[package]
name = "cabal-pack"
version = "0.3.2"
edition = "2021"
description = "A tool that helps you to turn in one command a Rust crate into a Haskell Cabal library"
repository = "https://github.com/yvan-sraka/cabal-pack"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
displaydoc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
thiserror = "1.0"
