[package]
name = "cabal-pack"
version = "0.6.0"
edition = "2021"
description = "A tool that helps you to turn in one command a Rust crate into a Haskell Cabal library"
repository = "https://github.com/yvan-sraka/cabal-pack"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "4.0", features = ["derive"] }
displaydoc = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
