[package]
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
description = "A tool that helps you to turn in one command a Rust crate into a Haskell Cabal library"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cabal-pack"
repository = "https://github.com/yvan-sraka/cabal-pack"
rust-version = "1.62.1"
version = "0.6.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "4.0", features = ["derive"] }
displaydoc = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
